# plugin_template

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  pch.h
